--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <h1><b>To-do  List</b><img src="logo.png" height="50px"></h1>
+        <h1><b>To-do  List</b><img src="logo.png" height="60px"></h1>
         <form id="new-task-form">
             <input
                 type="text"
@@ -33,7 +33,7 @@
 
     <main>
         <section class="task-list">
-            <h2>Tasks that have been submitted</h2>
+            <h2>Tasks submitted</h2>
 
             <div id="task">
                 
